objects/ROS_Cycle__c.object
<CustomObject>
    <fields>
        <fullName>Cycle_End_Date__c</fullName>
        <description>Ending Date of the ROS Cycle</description>
        <label>Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cycle_Month__c</fullName>
        <label>Cycle Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle_Start_Date__c</fullName>
        <description>Starting Date of the ROS Cycle</description>
        <label>Cycle Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cycle_Year__c</fullName>
        <label>Cycle Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <label>Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_c__c</fullName>
        <formula>CASE(TEXT(Cycle_Month__c),
&quot;May&quot;, &quot;1H&quot;,
&quot;November&quot;, &quot;2H&quot;,
&quot;&quot;) &amp; RIGHT(TEXT(Cycle_Year__c) ,2)</formula>
        <label>Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Reminder__c</fullName>
        <inlineHelpText>Enter Number of days for first reminder.</inlineHelpText>
        <label>First Reminder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Cycle_Name__c</fullName>
        <label>Next Cycle Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1H14</fullName>
                </value>
                <value>
                    <fullName>2H14</fullName>
                </value>
                <value>
                    <fullName>1H15</fullName>
                </value>
                <value>
                    <fullName>2H15</fullName>
                </value>
                <value>
                    <fullName>1H16</fullName>
                </value>
                <value>
                    <fullName>2H16</fullName>
                </value>
                <value>
                    <fullName>1H17</fullName>
                </value>
                <value>
                    <fullName>2H17</fullName>
                </value>
                <value>
                    <fullName>1H18</fullName>
                </value>
                <value>
                    <fullName>2H18</fullName>
                </value>
                <value>
                    <fullName>1H19</fullName>
                </value>
                <value>
                    <fullName>2H19</fullName>
                </value>
                <value>
                    <fullName>1H20</fullName>
                </value>
                <value>
                    <fullName>2H20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Pending_for_Shipment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total (Pending for Shipment)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Reticle_Pending_with_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Reticle( Pending with Customer)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ROS Cycle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cycle_Start_Date__c</columns>
        <columns>Cycle_End_Date__c</columns>
        <columns>Next_Cycle_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ROS Cycle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ROS Cycles</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ROS_Cycle_EndDate_GTE_TODAY</fullName>
        <active>true</active>
        <description>Cycle End Date should be greater than or equal to TODAY.</description>
        <errorConditionFormula>AND(Cycle_End_Date__c &lt; TODAY(),
$User.HCM_Login_ID__c &lt;&gt; &apos;CRMBATCHUSR&apos;, 
$User.HCM_Login_ID__c &lt;&gt; &apos;E1006044&apos;, 
$User.HCM_Login_ID__c &lt;&gt; &apos;CRMDEVS&apos;
)</errorConditionFormula>
        <errorDisplayField>Cycle_End_Date__c</errorDisplayField>
        <errorMessage>Cycle End Date should be greater than or equal to TODAY.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ROS_Cycle_EndDate_GT_StartDate</fullName>
        <active>true</active>
        <description>Cycle End Date should be greater than Cycle Start Date.</description>
        <errorConditionFormula>AND(
Cycle_End_Date__c  &lt;= Cycle_Start_Date__c,
$User.HCM_Login_ID__c &lt;&gt; &apos;CRMBATCHUSR&apos;, 
$User.HCM_Login_ID__c &lt;&gt; &apos;E1006044&apos;, 
$User.HCM_Login_ID__c &lt;&gt; &apos;CRMDEVS&apos;
)</errorConditionFormula>
        <errorDisplayField>Cycle_End_Date__c</errorDisplayField>
        <errorMessage>Cycle End Date should be greater than Cycle Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ROS_Cycle_EndDate_UnEditable</fullName>
        <active>true</active>
        <description>Once the End Date has been populated on a particular cycle, it cannot be changed further.</description>
        <errorConditionFormula>AND(
  !ISNEW(),
  !ISBLANK(PRIORVALUE(Cycle_End_Date__c)),
  OR(
      PRIORVALUE(Cycle_End_Date__c) != Cycle_End_Date__c,
      ISBLANK(Cycle_End_Date__c)
  ),
  $User.HCM_Login_ID__c &lt;&gt; &apos;CRMBATCHUSR&apos;,
  $User.HCM_Login_ID__c &lt;&gt; &apos;E1006044&apos;,
  $User.HCM_Login_ID__c &lt;&gt; &apos;CRMDEVS&apos;
)</errorConditionFormula>
        <errorDisplayField>Cycle_End_Date__c</errorDisplayField>
        <errorMessage>You cannot edit Cycle End Date once assigned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ROS_Cycle_StartDate_UnEditable</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PRIORVALUE(Cycle_Start_Date__c) != Cycle_Start_Date__c,
$User.HCM_Login_ID__c &lt;&gt; &apos;CRMBATCHUSR&apos;, 
$User.HCM_Login_ID__c &lt;&gt; &apos;E1006044&apos;, 
$User.HCM_Login_ID__c &lt;&gt; &apos;CRMDEVS&apos;
)</errorConditionFormula>
        <errorDisplayField>Cycle_Start_Date__c</errorDisplayField>
        <errorMessage>You cannot edit the Cycle Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ROS_NextCycle_Mandatory_on_CurrentEnd</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
!ISNULL(Cycle_End_Date__c) &amp;&amp; ISPICKVAL(Next_Cycle_Name__c,&apos;&apos;),
$User.HCM_Login_ID__c &lt;&gt; &apos;CRMBATCHUSR&apos;, 
$User.HCM_Login_ID__c &lt;&gt; &apos;E1006044&apos;, 
$User.HCM_Login_ID__c &lt;&gt; &apos;CRMDEVS&apos;
)</errorConditionFormula>
        <errorDisplayField>Next_Cycle_Name__c</errorDisplayField>
        <errorMessage>Please fill in the Next Cycle name.</errorMessage>
    </validationRules>
</CustomObject>